# morse-wip

./: AUTHORS  ChangeLog  LTRHAT_output.ods  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TEXT.txt  a.out  autocr.c  autocr.f  bpfdet.c  bpfdet.f  config.h  config.h.in  configure  configure.ac  configure.in  data.txt  displa.f.backup  errors.txt  imax.ods  initl.c  initl.f  inputl.c  inputl.f  ipmax.ods  kalfil.c  kalfil.f  key.c  key.f  likhd.c  likhd.f  model.c  model.f  morse.c  morse.f  noise.c  (+32 more)
doc/: Probabilities_over_time.kst  Probabilities_over_time_14dB.kst  Probabilities_over_time_4_4dB.kst  Probabilities_over_time_8dB.kst
examples/: sprobs.txt  sprobs14db.txt  sprobs4-4db.txt  test-10db.in  test-12db.in  test-14db.in  test-4_5db.in  test-6db.in  test-8db.in  test1.in  test1.out  test2.in  test2.out
src/: MORSEM  Makefile.am  Makefile.in  OUTPUT  TEXT  autocr.c  bmorse.c  bmorse.cxx  bmorse.h  bpfdet.c  config.h  initl.c  initl.cxx  inputl.c  kalfil.c  kalfil.cxx  key.c  key.cxx  likhd.c  likhd.cxx  model.c  model.cxx  morse  morse.c  morse.h  noise.c  noise.cxx  path.c  path.cxx  probp.c  probp.cxx  proces.c  proces.cxx  ptrans.c  ptrans.cxx  savep.c  savep.cxx  simsgi.c  spdtr.c  spdtr.cxx  (+14 more)
test/: cer_vs_snr_test.tc  generate_morse.m  levenshtein.py  morse.m
tmpcsave/: bpfdet.c  common.h  displa.c  filter.c  initl.c  inputl.c  kalfil.c  key.c  likhd.c  model.c  morse.c  noise.c  path.c  probp.c  proces.c  ptrans.c  randn.c  rcvr.c  savep.c  simsgi.c  spdtr.c  sprob.c  transl.c  trelis.c  trprob.c  xtrans.c
tmpsave/: bpfdet.f  initl.f  inputl.f  kalfil.f  key.f  likhd.f  model.f  morse.f  noise.f  path.f  probp.f  proces.f  ptrans.f  savep.f  simsgi.f  spdtr.f  sprob.f  transl.f  trelis.f  trprob.f  xtrans.f
