#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_COPYRIGHT([Copyright (C) 2013,2014 Mauri Niininen, AG1LE])

AC_PREREQ(2.61)
m4_define(BMORSE_MAJOR, [0])
m4_define(BMORSE_MINOR, [1])
m4_define(BMORSE_PATCH, [.01])

AC_INIT([bmorse], BMORSE_MAJOR.BMORSE_MINOR[]BMORSE_PATCH, [ag1le@innomore.com])

PACKAGE=bmorse
VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)


AM_INIT_AUTOMAKE([-Wall foreign std-options 1.9.6])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
AM_MAINTAINER_MODE
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])


BMORSE_AUTHORS="Mauri Niininen"
PACKAGE_HOME="https://github.com/ag1le/morse-wip"
PACKAGE_DL="https://github.com/ag1le/morse-wip"
PACKAGE_PROJ="https://github.com/ag1le/morse-wip"
PACKAGE_NEWBUG="https://github.com/ag1le/morse-wip/issues"
PACKAGE_DOCS="https://github.com/ag1le/morse-wip/wiki"
PACKAGE_GUIDE="https://github.com/ag1le/morse-wip/wiki"
AC_DEFINE_UNQUOTED([FLDIGI_AUTHORS], ["$BMORSE_AUTHORS"], [bmorse authors])
AC_DEFINE_UNQUOTED([PACKAGE_HOME], ["$PACKAGE_HOME"], [Home page])
AC_DEFINE_UNQUOTED([PACKAGE_DL], ["$PACKAGE_DL"], [Download page])
AC_DEFINE_UNQUOTED([PACKAGE_NEWBUG], ["$PACKAGE_NEWBUG"], [Trac new ticket page])
AC_DEFINE_UNQUOTED([PACKAGE_DOCS], ["$PACKAGE_DOCS"], [Docs index])
AC_DEFINE_UNQUOTED([PACKAGE_GUIDE], ["$PACKAGE_GUIDE"], [Beginners guide])
AC_SUBST([BMORSE_AUTHORS], [$FLDIGI_AUTHORS])
AC_SUBST([PACKAGE_HOME], [$PACKAGE_HOME])
AC_SUBST([PACKAGE_DL], [$PACKAGE_DL])
AC_SUBST([PACKAGE_PROJ], [$PACKAGE_PROJ])
AC_SUBST([PACKAGE_NEWBUG], [$PACKAGE_NEWBUG])
AC_SUBST([PACKAGE_DOCS], [$PACKAGE_DOCS])
AC_SUBST([PACKAGE_GUIDE], [$PACKAGE_GUIDE])
                    
# Checks for programs.
AC_PROG_CXX (g++)
AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS



AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
