
bin_PROGRAMS = bmorse
FLAGS= -Wall -pedantic

#AM_CXXFLAGS = -I$(src)

bmorse_SOURCES =   fftfilt.cxx  kalfil.cxx  model.cxx  probp.cxx\
				   savep.cxx   sprob.cxx   trelis.cxx  xtrans.cxx \
				   bmorse.cxx  fft.cxx misc.cxx initl.cxx     noise.cxx\
				   proces.cxx  trprob.cxx\
				   likhd.cxx   path.cxx\
				   ptrans.cxx  spdtr.cxx   transl.cxx  window.cxx\
				   bmorse.h  complex.h  config.h  fftfilt.h  fft.h  misc.h  window.h

				   
				   
LIBS =  -lm -lsndfile -lfftw3

